--- a/res/drawable/filled_grey_rectangle.xml
+++ b/res/drawable/filled_grey_rectangle.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/surespotBlue" >
+    <solid android:color="#FFBBBBBB" >
     </solid>
 
 </shape>
