--- a/res/drawable/transparent_rectangle.xml
+++ b/res/drawable/transparent_rectangle.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <solid android:color="@color/surespotBlue" >
-    </solid>
-
-</shape>
+     <solid android:color="@android:color/transparent"></solid>
+   
+    
+   </shape>
+   
