--- a/res/layout/activity_billing.xml
+++ b/res/layout/activity_billing.xml
@@ -1,57 +1,167 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".BillingActivity" >
+    android:padding="8dp" >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="pay what you like. A random percentage between 0.1 and 5% will go to the ACLU" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".BillingActivity" >
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPurchase"
-        android:tag="1"
-        android:text="$1 via google play" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="pay what you like! we will donate 1% of the net to the ACLU"
+            android:textSize="16sp"
+            android:textStyle="italic" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPurchase"
-        android:tag="2"
-        android:text="$2 via google play" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="15dp"
+            android:text="VIA GOOGLE PLAY IN APP PURCHASE"
+            android:textSize="12sp"
+            android:textStyle="bold" >
+        </TextView>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPurchase"
-        android:tag="5"
-        android:text="$5 via google play" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPurchase"
-        android:tag="10"
-        android:text="$10 via google play" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onPurchase"
+                android:tag="1"
+                android:text="$1" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onPaypal"
-        android:text="paypal" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onPurchase"
+                android:tag="2"
+                android:text="$2" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onBitcoin"
-        android:text="copy bitcoin address to clipboard" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onPurchase"
+                android:tag="5"
+                android:text="$5" />
 
-</LinearLayout>
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onPurchase"
+                android:tag="10"
+                android:text="$10" />
+            
+            
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="onPurchase"
+                android:tag="20"
+                android:text="$20" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:onClick="onPurchase"
+                android:tag="50"
+                android:text="$50" />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:onClick="onPurchase"
+                android:tag="100"
+                android:text="$100" />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:onClick="onPurchase"
+                android:tag="1000000"
+                android:text="$1000000" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="VIA BITCOIN"
+            android:textSize="12sp"
+            android:textStyle="bold" >
+        </TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10sp"
+            android:gravity="center"
+            android:text="@string/donations__bitcoin"
+            android:textSize="14sp" >
+        </TextView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onBitcoinClipboard"
+            android:text="copy address to clipboard" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onBitcoinEmail"
+            android:text="send address and QR code in email" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onBitcoinWallet"
+            android:text="open bitcoin wallet (if supported)" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="15dp"
+            android:text="VIA PAYPAL"
+            android:textSize="12sp"
+            android:textStyle="bold" >
+        </TextView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onPaypalBrowser"
+            android:text="open link in browser" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onPaypalEmail"
+            android:text="send link in email" />
+    </LinearLayout>
+
+</ScrollView>
