--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -33,7 +33,7 @@
             <item
                 android:id="@+id/menu_pwyl"
                 android:icon="@drawable/heart"
-                android:title="pay what you like">
+                android:title="pay what you like!">
                 
             </item>
             <item
