--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -5,7 +5,6 @@
             android:key="pref_version"
             android:title="version" >
         </Preference>
-     
     </PreferenceCategory>
     <!--
          <PreferenceCategory android:title="display" >
@@ -79,6 +78,11 @@
             android:defaultValue="true"
             android:key="pref_logging"
             android:title="logging" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_crash_reporting"
+            android:title="silent error reporting" />
+
         <!--
              <CheckBoxPreference
             android:defaultValue="true"
