fix change password

--- a/res/layout/activity_change_password.xml
+++ b/res/layout/activity_change_password.xml
@@ -1,75 +1,80 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dip"
-    tools:context=".ChangePasswordActivity" >
+    android:layout_height="match_parent" >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dip"
-        android:text="select identity" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dip"
+        tools:context=".ChangePasswordActivity" >
 
-    <Spinner
-        android:layout_marginTop="5dp"
-        android:id="@+id/identitySpinner"
-        android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:textSize="16sp" >
-    </Spinner>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dip"
+            android:text="select identity" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="current password" />
+        <Spinner
+            android:id="@+id/identitySpinner"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="5dp"
+            android:textSize="16sp" >
+        </Spinner>
 
-    <EditText
-        android:id="@+id/etChangePasswordCurrent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:imeOptions="actionNext"
-        android:inputType="textPassword"
-        android:singleLine="true" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="current password" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dip"
-        android:text="new password" />
+        <EditText
+            android:id="@+id/etChangePasswordCurrent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:singleLine="true" />
 
-    <EditText
-        android:id="@+id/etChangePasswordNew"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:imeOptions="actionNext"
-        android:inputType="textPassword"
-        android:singleLine="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dip"
+            android:text="new password" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dip"
-        android:text="confirm password" />
+        <EditText
+            android:id="@+id/etChangePasswordNew"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:imeOptions="actionNext"
+            android:inputType="textPassword"
+            android:singleLine="true" />
 
-    <EditText
-        android:id="@+id/etChangePasswordConfirm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dip"
-        android:imeOptions="actionDone"
-        android:inputType="textPassword"
-        android:singleLine="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dip"
+            android:text="confirm password" />
 
-    <Button
-        android:id="@+id/bChangePassword"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="change password" >
-    </Button>
+        <EditText
+            android:id="@+id/etChangePasswordConfirm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dip"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
+            android:singleLine="true" />
 
-</LinearLayout>
+        <Button
+            android:id="@+id/bChangePassword"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="change password" >
+        </Button>
+    </LinearLayout>
+
+</ScrollView>
