--- a/res/layout/dialog_progress.xml
+++ b/res/layout/dialog_progress.xml
@@ -13,8 +13,9 @@
 
     <TextView
         android:id="@+id/text"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" 
+        android:layout_marginRight="10dp"/>
 
 </LinearLayout>
