set select activity title and button text correctly for select friend image/select image to send in conversation, #184

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -79,7 +79,7 @@
             android:key="pref_logging"
             android:title="logging" />
         <CheckBoxPreference
-            android:defaultValue="true"
+            android:defaultValue="false"
             android:key="pref_crash_reporting"
             android:title="silent error reporting" />
 
