--- a/res/layout/dialog_progress.xml
+++ b/res/layout/dialog_progress.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/abs__background_holo_light"
+    
     android:orientation="horizontal" >
 
     <ImageView
@@ -15,7 +17,8 @@
         android:id="@+id/text"
         android:gravity="center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" 
+        android:layout_height="match_parent"
+        android:textColor="@color/abs__primary_text_holo_light" 
         android:layout_marginRight="10dp"/>
 
 </LinearLayout>
