--- a/res/layout/activity_export_identity.xml
+++ b/res/layout/activity_export_identity.xml
@@ -3,20 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:padding="10dp"
     tools:context=".ExportIdentityActivity" >
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dip"
+        android:layout_marginBottom="10dp"
         android:text="select identity" />
 
     <Spinner
         android:id="@+id/identitySpinner"
         android:layout_width="fill_parent"
-        android:layout_height="40dp"
-        android:layout_marginBottom="5dp"        
+        android:layout_height="50dp"
+        android:layout_marginBottom="10dp"
         android:textSize="16dp" >
     </Spinner>
 
@@ -24,8 +24,14 @@
         android:id="@+id/bExportSd"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="@string/export_sd"
         android:textSize="16dp" >
     </Button>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="*note: this may or may not be the SD card depending on your ROM" />
 
 </LinearLayout>
