--- a/res/layout/friend_fragment.xml
+++ b/res/layout/friend_fragment.xml
@@ -9,8 +9,8 @@
         android:id="@+id/main_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent"
-        android:layout_above="@+id/etFriend" />
+        android:layout_above="@+id/etFriend"
+        android:background="@android:color/transparent" />
 
     <FrameLayout
         android:id="@+id/progressBar"
@@ -40,7 +40,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/welcome_to_surespot" />
 
             <TextView
@@ -81,7 +83,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/help_delete" />
+                android:text="@string/help_holdmessage" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -89,17 +91,21 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="5dp"
-                android:text="@string/help_imageZoom" />
+                android:text="@string/help_holdfriend" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="@string/early_pre_beta" />
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/help_imageZoom" />
         </LinearLayout>
     </ScrollView>
 
- <!--    <EditText
+    <!--
+    <EditText
         android:id="@+id/etFriend"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -123,5 +129,6 @@
         android:background="@drawable/send_button"
         android:text="invite"
         android:textColor="@android:color/black" />
- -->
+    -->
+
 </RelativeLayout>
