--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -51,7 +51,7 @@
         android:imeActionLabel="invite"
         android:imeOptions="actionSend"
         android:singleLine="true"
-        android:inputType="textNoSuggestions"
+        android:inputType="textNoSuggestions|textVisiblePassword"
         android:maxHeight="150sp"
         android:minHeight="45sp" >
     </EditText>
