--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -49,9 +49,9 @@
         android:layout_toLeftOf="@+id/bSend"
         android:layout_toRightOf="@+id/bEmoji"
         android:imeActionLabel="invite"
-        android:imeOptions="actionSend"
+        android:imeOptions="actionDone"
         android:singleLine="true"
-        android:inputType="textNoSuggestions|textVisiblePassword"
+        android:inputType="textNoSuggestions|textAutoComplete"
         android:maxHeight="150sp"
         android:minHeight="45sp" >
     </EditText>
