--- a/res/layout/chat_fragment.xml
+++ b/res/layout/chat_fragment.xml
@@ -1,62 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/chat_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
-    <RelativeLayout
+    <ListView
+        android:id="@+id/message_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/fEmoji" >
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="false"
+        android:stackFromBottom="true"
+        android:transcriptMode="normal" />
 
-        <ListView
-            android:id="@+id/message_list"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_above="@+id/etMessage"
-            android:drawSelectorOnTop="false"
-            android:stackFromBottom="true"
-            android:transcriptMode="normal" />
+    <FrameLayout
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" >
 
-        <FrameLayout
-            android:id="@+id/progressBar"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_above="@+id/etMessage"
-            android:visibility="gone" >
-
-            <ProgressBar
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center" />
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/message_list_empty"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_above="@+id/etMessage"
-            android:gravity="center"
-            android:text="@string/no_messages"
-            android:visibility="gone" />
-
-    </RelativeLayout>
-
-
-    
-    <!--     <EditText
-            android:id="@+id/etMessage"
-            android:layout_width="0dp"
+        <ProgressBar
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_toLeftOf="@+id/bSend"
-            android:layout_toRightOf="@+id/bEmoji"
-            android:imeActionLabel="send"
-            android:imeOptions="actionSend"
-            android:inputType="textMultiLine"
-            android:maxHeight="150sp"
-            android:minHeight="45sp" >
-        </EditText>
-     -->
-</RelativeLayout>
+            android:layout_gravity="center" />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/message_list_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_messages"
+        android:visibility="gone" />
+
+</LinearLayout>
